# eseven

./: Pipfile  Procfile  README.md  pyproject.toml  requirements.txt
cart/: cart.py  context_processor.py  views.py
cart/templatetags/: cart_tag.py
eseven/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
eseven/migrations/: 0001_initial.py  0002_alter_product_image.py  0002_link.py  0002_product_kind.py  0003_auto_20211118_0218.py  0004_auto_20211118_0229.py  0005_alter_link_code.py  0006_alter_order_code.py  0007_auto_20211118_0429.py
eseven/static/: main.js
eseven/static/styles/: main.css  products.css
eseven/templates/: base.html  cancelled.html  cart.html  contact.html  contact_template.txt  home.html  order_form.html  payment-complete.html  payments.html  product_categories.html  product_detail.html  products_page.html  success.html
payments/: urls.py  views.py
static/: main.js  staticfiles.json
static/styles/: main.1ecabb9b36b4.css  main.58acc130ba20.css  main.6848ffc663c4.css  main.8e6afa070529.css  main.9d13d92e3697.css  main.css  main.d5515db1e104.css  main.da93b5329a56.css  main.daad86277c58.css
the_app/: asgi.py  settings.py  urls.py  wsgi.py
