[tool.poetry]
name = "eseven"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
dj-database-url = "^0.5.0"
gunicorn = "^20.1.0"
setuptools = "^59.1.0"
whitenoise = "^5.3.0"
psycopg2 = "^2.9.2"
django-heroku = "^0.3.1"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
